# SoundboardBot

./: .gitignore  Dockerfile  GreatingsBot.py  README.md  main.py  pyproject.toml  tmp
.github/workflows/: cd.yaml
data/config/: voice_join_greetings.yaml
k8s/: deployment.yaml  pvc.yaml
sbbot/: client.py
sbbot/core/: __init__.py  audio.py  config.py  voice_join_greetings.py
